# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  errors.c  ft_split.c  ft_split_pro.c  ft_strnstr.c  main.c  makefile  minishell  minishell.c  minishell.h  notes  parse.c  tests_parsing.c  utils.c  utils_lst.c  utils_parse.c
includes/: minishell.h
libft/: Makefile
libft/includes/: get_next_line.h  libasm.h  libft.h
libft/src/gnl/: get_next_line.c  get_next_line_utils.c
libft/src/libasm/: ft_read.s  ft_strlen.s  ft_write.s
libft/src/libft/: ft_atof.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memset.c  ft_putendl_fd.c  ft_split.c  ft_strchr.c  ft_strlcat.c  ft_strlcpy.c  ft_strmapi.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
our_libft/includes/: get_next_line.h  libft.h
our_libft/src/libasm/: ft_strcmp.s  ft_strcpy.s  ft_strdup.s
our_libft/src/libft/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_lstadd_front.c  ft_memccpy.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_numlens.c  ft_putchar_fd.c  ft_putnbrs_fd.c  ft_putstr_fd.c  ft_strjoin.c  ft_strncmp.c  ft_strnstr.c  ft_tolower.c  ft_toupper.c
src/: main.c
src/parse/: arrays.c  env_subst.c  parse.c  redirections.c  symbols.c  utils_weird_cases.c  weird_cases.c
src/process/: echo.c  env_utils.c  fd_utils.c  processing_pipe.c  pwd.c  signals.c
srcs/: cd.c  common_utils.c  echo.c  env_export.c  env_utils.c  execve.c  exit.c  fd_utils.c  find.c  main.c  new_processing.c  processing_pipe.c  pwd.c  signals.c  unset.c  utils.c
srcs/parse/: arrays.c  env_subst.c  lines_and_quoters.c  parse.c  redirections.c  symbols.c  utils_array.c  utils_parse.c  utils_parse1.c  utils_weird_cases.c  weird_cases.c
tests/: tests_parsing.c
usefull/: error_codes  notes
